--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+}
+
+h1 {
+  background: #706464;
+  padding: 18px;
+  color: #fff;
+}
+
+.App {
+  background: rgb(199, 192, 216);
+  padding: 30px;
+  margin: 50px auto;
+  width: 80%;
+  box-shadow: 1px 2px 5px #eee;
+}
+
+input {
+  width: 80%;
+  border: 0;
+  padding: 6px 10px;
+  background: #e8e8e8;
+}
+
+button {
+  width: 20%;
+  border: 0;
+  padding: 6px 0;
+  margin: 0;
+  outline: 0;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  background: #4dc55b;
+}
+
+ol {
+  padding-left: 2%;
+  font-size: 30px;
+}
+
+li {
+  margin: 15px 0%;
+
+}
+
+li span {
+  font-size: 30px;
+  display: inline-block;
+  width: 60%;
+  color: #6a6a6a;
+}
+
+li>button:first-of-type {
+  width: 19%;
+  color: #fff;
+  margin-right: 1%;
+  background: #6a6a6a;
+}
+
+li>button:last-of-type {
+  color: #fff;
+  background: #d9534f;
+}
+
+ul>form {
+  margin: 15px 0;
 }
